--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -18,4 +18,18 @@
   flex-direction: column;
   min-height: 100vh;
   background-color: var(--gray-light-color);
+  font-size: 18px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  padding: 20px;
+
+  margin: 30px;
+  width: 92%;
+  height: 90%;
+  background-color: white;
+  box-shadow: 2px 2px 20px rgb(148, 148, 148);
 }
