feat(front): The button has been implemented in the revenue page.

--- a/frontend/src/app/components/styles/Table.module.css
+++ b/frontend/src/app/components/styles/Table.module.css
@@ -1,7 +1,7 @@
 .table {
-    width: 97%;
+    width: 100%;
     border-collapse: collapse;
-    margin: 20px;
+    margin-top: 20px;
 }
 
 .th,
@@ -16,6 +16,7 @@
     background-color: var(--blue-dark-color);
     color: white;
     text-align: center;
+    font-size: 16px;
 }
 
 .tr:nth-child(even) {
