--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -33,3 +33,46 @@
   background-color: white;
   box-shadow: 2px 2px 20px rgb(148, 148, 148);
 }
+
+/* ----------- Form Styles ------------*/
+
+.form-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  margin: 0 40px;
+}
+
+.form-item {
+  display: flex;
+  margin: 10px 0;
+}
+
+.radio-item {
+  display: flex;
+}
+
+.form-radio {
+  margin: 10px;
+  width: 20px;
+}
+
+.form-label {
+  text-align: left;
+  margin: 5px 15px 0 0;
+}
+
+.form-input, .form-textarea, .form-select {
+  width: 100%;
+  padding: 5px;
+  border-radius: 5px;
+  border: 2px solid #b4b4b4;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.form-buttons-area {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
+}
